--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <!-- react bootstrap -->
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-    <title>React App</title>
+    <title>Quote Me</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
