--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Oxygen:wght@300&family=Texturina:wght@900&display=swap" rel="stylesheet">    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
